changes to color

--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ padding: 5px;
 
 /* Paragraph Context */
 .text {
-background-color:palevioletred;
-color:white;
+background-color:white;
+color:palevioletred;
 padding:5px;
 }
 
 /* "Visit this Website to Read More!" Link */
- 
+
 
 
 
