changes to paragraph color

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ padding: 5px;
 
 /* Paragraph Context */
 .text {
-background-color:white;
-color:palevioletred;
+background-color:palevioletred;
+color:white;
 padding:5px;
 }
 
