--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ padding: 5px;
 
 /* Paragraph Context */
 .text {
-background-color:palevioletred;
+background-color:white;
 color:white;
 padding:5px;
 }
