--- a/style.css
+++ b/style.css
@@ -10,6 +10,23 @@ padding: 5px;
 background-color:white;
 color:palevioletred;
 padding:5px;
+.bona-nova-sc-regular {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .bona-nova-sc-regular-italic {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .bona-nova-sc-bold {
+    font-family: "Bona Nova SC", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
 }
 
 /* "Visit this Website to Read More!" Link */
