--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ padding: 5px;
 background-color:white;
 color:palevioletred;
 padding:5px;
+font-family: "Source Serif 4", serif;
+
+}
 
 /* "Visit this Website to Read More!" Link */
 
