--- a/style.css
+++ b/style.css
@@ -10,8 +10,12 @@ padding: 5px;
 background-color:white;
 color:palevioletred;
 padding:5px;
-font-family: "Source Serif 4", serif;
-
+.prata-regular {
+    font-family: "Prata", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 }
 
 /* "Visit this Website to Read More!" Link */
