--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ padding:5px;
   }
   
 }
-p::first-line {
-    .roboto-black {
-      font-family: "Roboto", sans-serif;
-      font-weight: 900;
-      font-style: normal;
-    }
+p:first-of-type::first-letter {
+    .playball-regular {
+        font-family: "Playball", cursive;
+        font-weight: 400;
+        font-style: normal;
+      }      
+font-size: 4em;
 }
-
 
 /* "Visit this Website to Read More!" Link */
 
