--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ padding:5px;
   
 }
 p:first-of-type::first-letter {
-    .playball-regular {
+    .playball-regular 
         font-family: "Playball", cursive;
         font-weight: 400;
         font-style: normal;
         font-size: 4em;
-      }      
+            
 }
 
 /* "Visit this Website to Read More!" Link */
