--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
 background-color:palevioletred; 
 color:white;
 padding: 5px;
+
+line-height: 2em;
 }
 
 /* Paragraph Context */
@@ -23,10 +25,27 @@ p:first-of-type::first-letter {
         font-weight: 400;
         font-style: normal;
         font-size: 4em;
+        color: mediumvioletred;
             
 }
 
 /* "Visit this Website to Read More!" Link */
+a {
+    background-color: mediumvioletred;
+    color: white;
+    padding: 5px;
+}
+a:hover {
+    font-style: italic;
+
+}
+a:visited {
+    color: aqua;
+
+}
+a:active {
+    background-color: plum;
+}
 
 
 
