--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ padding:5px;
     font-family: "Prata", serif;
     font-weight: 400;
     font-style: normal;
+
+    line-height: 2em;
   }
   
 }
