--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ background-color:palevioletred;
 color:white;
 padding: 5px;
 
-line-height: 2em;
 }
 
 /* Paragraph Context */
@@ -22,13 +21,14 @@ padding:5px;
   
 }
 p:first-of-type::first-letter {
-    .playball-regular 
+    .playball-regular {
         font-family: "Playball", cursive;
         font-weight: 400;
         font-style: normal;
         font-size: 4em;
         color: mediumvioletred;
             
+}
 }
 
 /* "Visit this Website to Read More!" Link */
