--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ padding: 5px;
 background-color:white;
 color:palevioletred;
 padding:5px;
+.prata-regular {
     font-family: "Prata", serif;
     font-weight: 400;
     font-style: normal;
@@ -20,14 +21,13 @@ padding:5px;
   
 }
 p:first-of-type::first-letter {
-    .playball-regular {
+    .playball-regular 
         font-family: "Playball", cursive;
         font-weight: 400;
         font-style: normal;
         font-size: 4em;
         color: mediumvioletred;
             
-}
 }
 
 /* "Visit this Website to Read More!" Link */
