--- a/style.css
+++ b/style.css
@@ -21,12 +21,13 @@ padding:5px;
   
 }
 p:first-of-type::first-letter {
-    .playball-regular 
+    .playball-regular {
         font-family: "Playball", cursive;
         font-weight: 400;
         font-style: normal;
         font-size: 4em;
         color: mediumvioletred;
+    }
             
 }
 
