--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ padding:5px;
   
   
 }
-p:first-of-type:first-letter {
+p:first-of-type::first-letter
     .playball-regular 
         font-family: "Playball", cursive;
         font-weight: 400;
