--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p:first-of-type::first-letter {
     .playball-regular {
         font-family: "Playball", cursive;
         font-weight: 400;
-        font-style: normal;
+        font-style: cursive;
         font-size: 4em;
         color: mediumvioletred;   
     }
